# gridder

./: .gitignore  404.html  CMakeCache.txt  CMakeLists.txt  README.md  build_docs.sh  example_params.yml  generate_regions.py  index.html  make_test_snap.py  mkdocs.yml  pytest.ini  read_grid.py  region_smoother.py  region_tools.py  requirements-docs.txt  simple_test_params.yml  submit.sh  test_conversion_manual.hdf5
.github/workflows/: deploy-docs.yml  test.yml
analysis/: grid_cell_evolution.py  hist_overdensities.py  hist_overdensities_multi_box.py  hist_overdensities_multi_z.py  hist_region_comp.py  hist_region_multi_z.py  region_spread.py  smooth_grid_cell_evolution.py  visualise_grid.py
conversion/: index.html
docs/: README.md  conversion.md  gridding.md  index.md  installation.md  mpi.md  parameters.md  quickstart.md  runtime-arguments.md
docs/getting-started/: configuration.md  installation.md  parameters.md  quickstart.md
docs/performance/: mpi.md  openmp.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/parameters/: index.html
getting-started/quickstart/: index.html
gridding/: generate_grid.py  get_ovden_grid.sh  grid_parent.py  grid_parent_collect.py  grid_parent_distributed.py  grid_smoother.py  gridder.py  index.html  submission_script_example.sh  submit.sh
installation/: index.html
mpi/: index.html
parameters/: index.html
performance/mpi/: index.html
performance/openmp/: index.html
quickstart/: index.html
runtime-arguments/: index.html
scripts/: build_and_test_debug.sh
search/: search_index.json
selection/: build_hmf.py  methods.py  read_halos.py  select_regions.py
smoothing/: get_region_grid.sh  grid_smoother.py  smoothed_grid.py
src/: cell.cpp  cell.hpp  cell_search.cpp  cmd_parser.hpp  construct_cells.cpp  construct_grid_points.cpp  debugging_utils.cpp  debugging_utils.hpp  grid_point.cpp  grid_point.hpp  gridder.cpp  hdf_io.cpp  hdf_io.hpp  logger.cpp  logger.hpp  metadata.cpp  metadata.hpp  output.cpp  parallel_io.hpp  params.cpp  params.hpp  particle.hpp  partition.cpp  partition.hpp  serial_io.hpp  simulation.cpp  simulation.hpp  talking.hpp  threadpool.cpp  threadpool.hpp  version.h
src/config/: version.h.in
tests/: .gitignore  README.md  TEST_GUIDE.md  TEST_SUITE_README.md  analyze_debug_output.py  file_grid_test_params.yml  make_test_snap.py  run_all_tests.sh  run_simple_test.sh  run_tests.sh  simple_test_params.yml  test_conversion.py  test_cosmology.py  test_file_grid params.yml  test_file_gridding.py  test_gridder.py  test_suite.py
tests/data/grid_points_files/: malformed.txt  valid_points.txt  with_comments.txt
tests/data/unit_tests/: dense.hdf5  dense_out.hdf5  dense_out_rank0.hdf5  dense_out_rank1.hdf5  empty_cells.hdf5  empty_cells_out.hdf5  empty_cells_out_rank0.hdf5  empty_cells_out_rank1.hdf5  mass_conserve.hdf5  mass_conserve_out.hdf5  mass_conserve_out_rank0.hdf5  mass_conserve_out_rank1.hdf5  mpi_balance.hdf5  mpi_balance_out.hdf5  mpi_balance_out_rank0.hdf5  mpi_balance_out_rank1.hdf5  mpi_proxy_out.hdf5  mpi_proxy_out_rank0.hdf5  mpi_proxy_out_rank1.hdf5  single_particle.hdf5  single_particle_out.hdf5  single_particle_out_rank0.hdf5  single_particle_out_rank1.hdf5  sparse.hdf5  sparse_out.hdf5  sparse_out_rank0.hdf5  sparse_out_rank1.hdf5  test_params.yml  uniform_out.hdf5  uniform_out_rank0.hdf5  uniform_out_rank1.hdf5
tools/: README.md  convert_to_gridder_format.py  get_fof_grid_points_soap.py  grid_summary.py
weighting/: knn_weighter.py  test_hmf_weighting.py
